[tool.poetry]
name = "brgy-marketplace"
version = "0.1.0"
description = "Barangay Home-Based Business Marketplace"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
pydantic = "2.5.0"
pydantic-settings = "2.1.0"
sqlalchemy = {extras = ["asyncio"], version = "2.0.36"}
sqlmodel = "0.0.14"
aiosqlite = "0.19.0"
alembic = "1.13.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
python-multipart = "0.0.6"
jinja2 = "3.1.2"
aiofiles = "23.2.1"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

